[tool.poetry]
name = "ipfox"
version = "0.1.0"
description = "Automatically send IP address on server reboot."
authors = ["spencerwooo <spencer.woo@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
ruff = "^0.0.149"
isort = "^5.10.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
