[project]
name = "ipfox"
version = "0.2.0"
description = "Automatically send IP address on server reboot."
authors = [{ name = "spencerwooo", email = "spencer.woo@outlook.com" }]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "B", "SIM"]
